added the new rules